--- a/requirements.txt
+++ b/requirements.txt
@@ -1,302 +1,9 @@
-aiohttp @ file:///C:/ci/aiohttp_1614361236131/work
-alabaster==0.7.12
-altair @ file:///tmp/build/80754af9/altair_1599835197802/work
-anaconda-client==1.7.2
-anaconda-navigator==1.9.12
-anaconda-project @ file:///tmp/build/80754af9/anaconda-project_1610472525955/work
-anyio @ file:///C:/ci/anyio_1617783502106/work/dist
-argh==0.26.2
-argon2-cffi @ file:///C:/ci/argon2-cffi_1613037829118/work
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astor==0.8.1
-astroid @ file:///C:/ci/astroid_1613501147567/work
-astropy==4.0.2
-async-generator==1.10
-async-timeout==3.0.1
-atomicwrites==1.4.0
-attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
-autopep8 @ file:///tmp/build/80754af9/autopep8_1615918855173/work
-Babel @ file:///tmp/build/80754af9/babel_1607110387436/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-backports.functools-lru-cache @ file:///tmp/build/80754af9/backports.functools_lru_cache_1618170165463/work
-backports.shutil-get-terminal-size @ file:///tmp/build/80754af9/backports.shutil_get_terminal_size_1608222128777/work
-backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
-backports.weakref==1.0.post1
-base58 @ file:///home/conda/feedstock_root/build_artifacts/base58_1610222858736/work
-bcrypt @ file:///C:/ci/bcrypt_1597936262193/work
-beautifulsoup4 @ file:///home/linux1/recipes/ci/beautifulsoup4_1610988766420/work
-bitarray @ file:///C:/ci/bitarray_1618435049465/work
-bkcharts==0.2
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-blinker==1.4
-bokeh @ file:///C:/ci/bokeh_1617827552967/work
-boto==2.49.0
-boto3 @ file:///tmp/build/80754af9/boto3_1617902877650/work
-botocore @ file:///tmp/build/80754af9/botocore_1618262025179/work
-Bottleneck==1.3.2
-brotlipy==0.7.0
-cachetools @ file:///tmp/build/80754af9/cachetools_1619597386817/work
-certifi==2020.12.5
-cffi @ file:///C:/ci/cffi_1613247269562/work
-chardet @ file:///C:/ci/chardet_1605285153095/work
-click @ file:///home/linux1/recipes/ci/click_1610990599742/work
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-clyent==1.2.2
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-comtypes==1.1.9
-conda==4.10.1
-conda-build==3.18.11
-conda-package-handling @ file:///C:/ci/conda-package-handling_1618262422346/work
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-contextvars==2.4
-cryptography==2.9.2
-cycler==0.10.0
-Cython @ file:///C:/ci/cython_1618435343278/work
-cytoolz==0.11.0
-dask==2.14.0
-dataclasses @ file:///tmp/build/80754af9/dataclasses_1614363715916/work
-decorator @ file:///tmp/build/80754af9/decorator_1617916966915/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distributed @ file:///C:/ci/distributed_1605048547742/work
-docutils==0.16
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock @ file:///home/linux1/recipes/ci/filelock_1610993975404/work
-flake8 @ file:///tmp/build/80754af9/flake8_1615834841867/work
-Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
-fsspec @ file:///tmp/build/80754af9/fsspec_1617959894824/work
-future==0.18.2
-fuzzywuzzy==0.17.0
-gevent @ file:///C:/ci/gevent_1616773190302/work
-gitdb @ file:///tmp/build/80754af9/gitdb_1617117951232/work
-GitPython @ file:///tmp/build/80754af9/gitpython_1614615697775/work
-glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
-gmpy2==2.0.8
-google-api-core @ file:///C:/ci/google-api-core-split_1613980333946/work
-google-api-python-client==1.6.3
-google-auth @ file:///tmp/build/80754af9/google-auth_1619477128713/work
-google-auth-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/google-auth-oauthlib_1603996258953/work
-google-cloud-bigquery==1.22.0
-google-cloud-core @ file:///tmp/build/80754af9/google-cloud-core_1613414810663/work
-google-cloud-storage==1.27.0
-google-resumable-media==0.5.0
-googleapis-common-protos @ file:///C:/ci/googleapis-common-protos-feedstock_1617957821459/work
-greenlet @ file:///C:/ci/greenlet_1611958382984/work
-h5py==2.10.0
-HeapDict==1.0.1
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-httplib2 @ file:///home/conda/feedstock_root/build_artifacts/httplib2_1590007784658/work
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-idna-ssl @ file:///C:/ci/idna_ssl_1611752657819/work
-imageio @ file:///tmp/build/80754af9/imageio_1617700267927/work
-imagesize @ file:///home/ktietz/src/ci/imagesize_1611921604382/work
-immutables @ file:///C:/ci/immutables_1615841288064/work
-importlib-metadata @ file:///C:/ci/importlib-metadata_1617877476772/work
-iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
-ipykernel @ file:///C:/ci/ipykernel_1596206775157/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython==7.13.0
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-isort @ file:///tmp/build/80754af9/isort_1616355431277/work
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.15.2
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
-jmespath @ file:///tmp/build/80754af9/jmespath_1594304593830/work
-joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
-json5==0.9.5
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-core @ file:///C:/ci/jupyter_core_1612213536848/work
-jupyter-packaging @ file:///tmp/build/80754af9/jupyter-packaging_1613502826984/work
-jupyter-server @ file:///C:/ci/jupyter_server_1616084123252/work
-jupyterlab @ file:///tmp/build/80754af9/jupyterlab_1619133235951/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1617134334258/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-keyring @ file:///C:/ci/keyring_1614617025616/work
-kiwisolver @ file:///C:/ci/kiwisolver_1612282446297/work
-klib @ file:///home/conda/feedstock_root/build_artifacts/klib_1596690884476/work
-lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529300868/work
-libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
-llvmlite==0.36.0
-locket==0.2.1
-lxml @ file:///C:/ci/lxml_1616443258060/work
-MarkupSafe==1.1.1
-matplotlib @ file:///C:/ci/matplotlib-suite_1613408055530/work
-mccabe==0.6.1
-menuinst==1.4.16
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-mock @ file:///tmp/build/80754af9/mock_1607622725907/work
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1613676688952/work
-mpmath==1.2.1
-msgpack @ file:///C:/ci/msgpack-python_1612287359466/work
-multidict @ file:///C:/ci/multidict_1607362067746/work
-multipledispatch==0.6.0
-navigator-updater==0.2.1
-nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1601896775581/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-networkx==2.4
-nltk @ file:///tmp/build/80754af9/nltk_1618327084230/work
-nose @ file:///tmp/build/80754af9/nose_1606773131901/work
-notebook @ file:///C:/ci/notebook_1616443540258/work
-numba @ file:///C:/ci/numba_1616774290813/work
-numexpr @ file:///C:/ci/numexpr_1614798717152/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1603480701039/work
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
-oauth2client==4.1.3
-oauthlib==3.1.0
-olefile==0.46
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1615411699337/work
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-pandas @ file:///C:/ci/pandas_1602088210462/work
-pandas-gbq @ file:///home/conda/feedstock_root/build_artifacts/pandas-gbq_1605109892010/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605120535071/work
-paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work
-parso==0.5.2
-partd @ file:///tmp/build/80754af9/partd_1618000087440/work
-path @ file:///C:/ci/path_1614022434391/work
-pathlib2 @ file:///C:/ci/pathlib2_1607017293433/work
-pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-phonenumbers==8.10.19
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///C:/ci/pillow_1617386325740/work
-pkginfo==1.7.0
-pluggy @ file:///C:/ci/pluggy_1615976526223/work
-ply==3.11
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1618088486455/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-protobuf==3.15.8
-psutil @ file:///C:/ci/psutil_1612298125479/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-py @ file:///tmp/build/80754af9/py_1607971587848/work
-pyarrow==0.8.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pycrypto==2.6.1
-pycurl==7.43.0.6
-pydata-google-auth @ file:///tmp/build/80754af9/pydata-google-auth_1606158373901/work
-pydeck==0.3.1
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1616182067796/work
-pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
-Pygments @ file:///tmp/build/80754af9/pygments_1615143339740/work
-PyJWT @ file:///C:/ci/pyjwt_1619651879817/work
-pylint @ file:///C:/ci/pylint_1617135975205/work
-PyNaCl @ file:///C:/ci/pynacl_1595009245871/work
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyreadline==2.1
-pyrsistent @ file:///C:/ci/pyrsistent_1600141799440/work
-PySocks @ file:///C:/ci/pysocks_1605305839978/work
-pytest==6.2.3
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-python-http-client @ file:///tmp/build/80754af9/python_http_client_1613936462602/work
-python-jsonrpc-server==0.3.4
-python-language-server==0.31.9
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-PyWavelets @ file:///C:/ci/pywavelets_1601658410782/work
-pywin32==227
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq==20.0.0
-QDarkStyle @ file:///tmp/build/80754af9/qdarkstyle_1617386714626/work
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1615991616277/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1616775094278/work
-QtPy==1.9.0
-regex @ file:///C:/ci/regex_1617569913547/work
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-requests-oauthlib==1.3.0
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
-rsa @ file:///tmp/build/80754af9/rsa_1614366226499/work
-Rtree @ file:///C:/ci/rtree_1618421017076/work
-ruamel-yaml-conda @ file:///C:/ci/ruamel_yaml_1616016773336/work
-s3transfer @ file:///tmp/build/80754af9/s3transfer_1616183147336/work
-scikit-image==0.17.2
-scikit-learn @ file:///C:/ci/scikit-learn_1614446902030/work
-scipy @ file:///C:/ci/scipy_1597675683670/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1608578541026/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-sendgrid==6.0.5
-simplegeneric==0.8.1
-simplejson @ file:///C:/ci/simplejson_1614004022320/work
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1614366001199/work
-six @ file:///C:/ci/six_1605187303045/work
-smmap @ file:///tmp/build/80754af9/smmap_1611517644793/work
-sniffio @ file:///C:/ci/sniffio_1614030717740/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
-sortedcollections @ file:///tmp/build/80754af9/sortedcollections_1611172717284/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
-Sphinx @ file:///tmp/build/80754af9/sphinx_1618217326527/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///home/ktietz/src/ci/sphinxcontrib-htmlhelp_1611920974801/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///home/ktietz/src/ci/sphinxcontrib-serializinghtml_1611920755253/work
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spyder==4.1.2
-spyder-kernels @ file:///C:/ci/spyder-kernels_1599051725691/work
-SQLAlchemy @ file:///C:/ci/sqlalchemy_1618089997509/work
-statsmodels==0.12.2
-streamlit @ file:///home/conda/feedstock_root/build_artifacts/streamlit_1617992169914/work
-sympy @ file:///C:/ci/sympy_1618255480725/work
-tables==3.6.1
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
-terminado==0.9.4
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tifffile==2020.10.1
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
-tornado @ file:///C:/ci/tornado_1606942379977/work
-tqdm @ file:///tmp/build/80754af9/tqdm_1615925068909/work
-traitlets==4.3.3
-typed-ast @ file:///C:/ci/typed-ast_1610466539988/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1611751222202/work
-tzlocal @ file:///C:/ci/tzlocal_1597434980091/work
-ujson==1.35
-unicodecsv==0.14.1
-uritemplate==3.0.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1615837158687/work
-validators @ file:///tmp/build/80754af9/validators_1612286467315/work
-watchdog @ file:///C:/ci/watchdog_1612471247473/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-Werkzeug @ file:///home/ktietz/src/ci/werkzeug_1611932622770/work
-widgetsnbextension==3.5.1
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306197271/work
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.12.1
-xlrd @ file:///tmp/build/80754af9/xlrd_1608072521494/work
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1617224712951/work
-xlwings==0.23.0
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
-yarl @ file:///C:/ci/yarl_1606921989557/work
-zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
-zope.event==4.5.0
-zope.interface @ file:///C:/ci/zope.interface_1616357422405/work
+streamlit
+numpy
+pandas
+os
+requests
+bs4
+datetime
+re
+tqdm
